# pycphy

./: MANIFEST.in  PACKAGE_SUMMARY.md  README.md  pyproject.toml  requirements.txt  run_pycphy_case.py  setup.py
channelFlow/constant/: turbulenceProperties
channelFlow/system/: blockMeshDict  controlDict
pycphy/: __init__.py
pycphy/foamCaseDeveloper/: __init__.py
pycphy/foamCaseDeveloper/config/: __init__.py  block_mesh_config.py  control_config.py  global_config.py  turbulence_config.py
pycphy/foamCaseDeveloper/core/: __init__.py  block_mesh_developer.py  control_dict_writer.py  foam_case_manager.py  turbulence_properties_writer.py
pycphy/foamCaseDeveloper/writers/: __init__.py  block_mesh_writer.py  control_dict_writer.py  foam_writer.py  turbulence_properties_writer.py
